@@ -15,10 +15,10 @@ import com.powsybl.iidm.network.test.EurostagTutorialExample1Factory;
 import org.junit.Test;
 
 import java.io.IOException;
+import java.util.Collections;
 import java.util.List;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.*;
 
 /**
  * @author Geoffroy Jamgotchian <geoffroy.jamgotchian at rte-france.com>
@@ -29,7 +29,7 @@ public abstract class AbstractSecondaryVoltageControlTest {
     public void test() throws IOException {
         Network network = EurostagTutorialExample1Factory.createWithMoreGenerators();
         SecondaryVoltageControl control = network.newExtension(SecondaryVoltageControlAdder.class)
-                .addZone(new Zone("z1", new PilotPoint(List.of("NLOAD"), 15d), List.of("GEN", "GEN2")))
+                .addZone(new Zone("z1", new PilotPoint(List.of("NLOAD"), 15d), List.of("GEN", "GEN2"), Collections.emptyList()))
                 .add();
         assertEquals(1, control.getZones().size());
         Zone z1 = control.getZones().get(0);
@@ -37,7 +37,8 @@ public abstract class AbstractSecondaryVoltageControlTest {
         assertNotNull(z1.getPilotPoint());
         assertEquals(List.of("NLOAD"), z1.getPilotPoint().getBusbarSectionsOrBusesIds());
         assertEquals(15d, z1.getPilotPoint().getTargetV(), 0d);
-        assertEquals(List.of("GEN", "GEN2"), z1.getGeneratorsOrVscsIds());
+        assertEquals(List.of("GEN", "GEN2"), z1.getGeneratorsIds());
+        assertTrue(z1.getVscsIds().isEmpty());
         z1.getPilotPoint().setTargetV(16);
         assertEquals(16d, z1.getPilotPoint().getTargetV(), 0d);
     }
